Fix software cursor issue with screen magnification enabled

After screen magnification is enabled/disabled, the preferences for the
active profile have not been updated when the cursor compositing is
being updated. Use MagnificationController::IsEnabled() instead.

BUG=814634

Change-Id: Id72c579bd3395ae2e9748858622df37086bc4220
Reviewed-on: https://chromium-review.googlesource.com/951639
Reviewed-by: Mitsuru Oshima <oshima@chromium.org>
Commit-Queue: Weidong Guo <weidongg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#541676}
Former-commit-id: 47e352d1ef30ccd92db3dd6960264949538be4fc